<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/option_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/op_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/full_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dialog_option_full" />

            <RadioButton
                android:id="@+id/job_radioButton"
                android:layout_marginRight="30dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_option_job" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/section_title_layout"
        android:layout_below="@id/option_lay"
        android:layout_width="match_parent"
        android:layout_marginLeft="5.0dip"
        android:layout_marginRight="5.0dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/background_corners"
        android:gravity="center"
        android:layout_height="40dip" >

        <EditText
            android:id="@+id/content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/qq_edit_login"
            android:ems="20"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:hint="@string/search_dialog_hint"
            android:singleLine="true" >
            <requestFocus />
        </EditText>



    </LinearLayout>


</RelativeLayout>