<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/option_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/op_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal" >
            <RadioButton
                android:id="@+id/hig_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dialog_option_hig" />
            <RadioButton
                android:id="@+id/full_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dialog_option_full" />

            <RadioButton
                android:id="@+id/job_radioButton"
                android:layout_marginRight="30dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_option_job" />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/section_title_layout"
        android:layout_below="@id/option_lay"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dip"
            android:layout_weight="2"
            android:clickable="false"
            android:text="全部"
            android:gravity="center_vertical" >
        </TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="center" >

            <CheckBox
                android:id="@+id/all_ckb"
                android:layout_marginRight="10dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false" >
            </CheckBox>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/section_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5.0dip"
        android:layout_marginRight="5.0dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/background_corners"
        android:gravity="center" >

        <ListView
            android:id="@+id/data_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

    </LinearLayout>


</RelativeLayout>