<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7.0dip"
                android:layout_marginRight="7.0dip"
                android:layout_marginTop="7dip"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@drawable/background_corners"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7.0dip"
                        android:gravity="center"
                        android:text="@string/search_text_age_min" />

                    <EditText
                        android:id="@+id/min_age_text"
                        android:layout_width="45dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7.0dip"
                        android:background="@drawable/qq_edit_login"
                        android:ems="4"
                        android:gravity="center"
                        android:text="@string/family_age_min" />

                    <SeekBar
                        android:id="@+id/min_age_seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:layout_marginRight="5dip"
                        android:max="100"
                        android:progress="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dip" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7.0dip"
                        android:gravity="center"
                        android:text="@string/search_text_age_max" />

                    <EditText
                        android:id="@+id/max_age_text"
                        android:layout_width="45dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7.0dip"
                        android:background="@drawable/qq_edit_login"
                        android:ems="4"
                        android:gravity="center"
                        android:text="@string/family_age_min" />

                    <SeekBar
                        android:id="@+id/max_age_seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:layout_marginRight="5dip"
                        android:max="100"
                        android:progress="0" />
                </LinearLayout>
            </LinearLayout>
</LinearLayout>
